Updated CSS to target the correct element with overflow

--- a/docs/css/xetthecum.css
+++ b/docs/css/xetthecum.css
@@ -59,6 +59,12 @@ footer {
 .mxcw-leftPane {
     background-color: var(--panel-background);
     outline: 4px solid var(--content-active-panel-border);
+    overflow: scroll;
+}
+
+.mxcw-leftPane img {
+    max-height: 45vh;
+    width: auto;
 }
 
 .mxcw-content {
@@ -131,9 +137,6 @@ footer {
     gap: 1rem;
 }
 
-.mxcw-data {
-    overflow: scroll;
-}
 
 .long-down-arrow {
     margin: -130px auto 1rem auto;
